--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid #232323;
+  -webkit-text-fill-color: #a0a0a0;
+  -webkit-box-shadow: 0 0 0px 1000px #232323 inset;
+  box-shadow: 0 0 0px 1000px #232323 inset;
+  transition: background-color 5000s ease-in-out 0s;
+  color: #a0a0a0;
+  font-size: 16px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 11%;
